岗位编辑接口
